[package]
name = "ngram_dedup"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
clap = { version = "4.5.9", features = ["derive"] }
histo = "1.0.0"
indicatif = { version = "0.17.8", features = ["rayon", "improved_unicode"] }
petgraph = "0.6.5"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde-pickle = "1.1.1"
serde_json = "1.0.120"
tempfile = "3.10.1"
